# cv-binary-seq-eurorack

./: #auto_saved_files#  .gitignore  IO_Jacks.kicad_sch  README.md  cv_sequencer.csv  cv_sequencer.kicad_pcb  cv_sequencer.kicad_prl  cv_sequencer.kicad_pro  cv_sequencer.kicad_sch  cv_sequencer.sch-bak  cv_sequencer.xml  fp-info-cache  fp-lib-table  sym-lib-table
firmware/: .gitignore  Cargo.toml  README.md  link.x  memory.x
firmware/.cargo/: config
firmware/src/: main.rs  mcp48fxbxx.rs  usb_manager.rs
outputs/: cv_sequencer.csv
outputs/Gerbers/: cv_sequencer-B_Cu.gbr  cv_sequencer-B_Mask.gbr  cv_sequencer-B_Paste.gbr  cv_sequencer-B_Silkscreen.gbr  cv_sequencer-Edge_Cuts.gbr  cv_sequencer-F_Cu.gbr  cv_sequencer-F_Mask.gbr  cv_sequencer-F_Paste.gbr  cv_sequencer-F_Silkscreen.gbr  cv_sequencer-In1_Cu.gbr  cv_sequencer-In2_Cu.gbr  cv_sequencer-NPTH.drl  cv_sequencer-PTH.drl  cv_sequencer-job.gbrjob
outputs/digikey_order_files/: qty_dkpn_bom.csv
outputs/panel_dxf/: cv_sequencer-User_Drawings.dxf  cv_sequencer-User_Eco1.dxf  drawing.dxf  panel.scad  panel.stl  panel_with_support.stl
