[package]
name = "cv-binary-sequencer"
version = "0.1.0"
authors = ["Shulltronics <carstentb@protonmail.com>"]
edition = "2021"
description = "Firmware for CV-Binary-Sequencer Eurorack Module"

[dependencies]
panic-halt = "0.2.0"
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.7.1", optional = true }
embedded-time = "0.12.0"
embedded-hal = "0.2.5"
rp2040-boot2 = { version = "0.2.0", optional = true }
rp2040-hal = "0.4.0"

[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt", "rp2040-hal/rt"]