[package]
name = "cv-binary-sequencer"
version = "0.1.0"
authors = ["Shulltronics <carstentb@protonmail.com>"]
edition = "2021"
description = "Firmware for CV-Binary-Sequencer Eurorack Module"

[dependencies]
panic-halt            = "0.2.0"
cortex-m              = "0.7.7"
cortex-m-rt           = { version = "0.7.2", optional = true }
# embedded-time         = "0.12.1"
fugit                 = "0.3.6"
embedded-hal          = "0.2.7"
rp2040-boot2          = { version = "0.2.1", optional = true }
rp2040-hal            = "0.7.0"

display-interface-spi = "0.4.1"
st7789                = "0.6.1"
embedded-graphics     = "0.7.1"

rotary-encoder-hal    = "0.5.0"

[features]
default               = ["boot2", "rt"]
boot2                 = ["rp2040-boot2"]
rt                    = ["cortex-m-rt", "rp2040-hal/rt"]